<resources>
    <string name="app_name">The Tutor BETA</string>
    <string name="Loading_appTitle">THE TUTOR</string>
    <string name="Loading_forBeta">for Beta Testers</string>
    <string name="NoInternet_title">서버에 연결할 수 없습니다</string>
    <string name="NoInternet_subTitle">인터넷 연결을 다시 한 번 확인해주세요</string>
    <string name="NoInternet_refresh">새로고침</string>
    <string name="Hello_title">환영합니다!</string>
    <string name="Hello_subTitle">The Tutor는 사용자 맞춤형 공부 습관 관리 인공지능입니다</string>
    <string name="signUp">회원가입</string>
    <string name="login">로그인</string>
    <string name="Main_Dday">여기를 눌러 디데이 설정</string>
    <string name="Main_setting">설정</string>
    <string name="Main_Diagnosis">학습 진단</string>
    <string name="Main_study">추천 시간표</string>
    <string name="Main_fab">main FAB button</string>
    <string name="Home_diagnosis1">공부 코칭</string>
    <string name="Home_diagnosis2">바로가기</string>
    <string name="Home_diagnosis_arrow">Home_diagnosis_arrow</string>
    <string name="Studying_pause">공부 일시정지</string>
    <string name="Studying_finish">공부 마치기</string>
    <string name="Studying_phone">휴대폰 사용하기</string>
    <string name="Studying_total">총 공부시간</string>
    <string name="Studying_toRest">쉬는시간까지</string>
    <string name="Setting_title">설정</string>
    <string name="Setting_changeSub">과목 변경</string>
    <string name="Setting_on">켜짐</string>
    <string name="Setting_push">푸시 알림</string>
    <string name="Setting_changePassword">비밀번호 변경</string>
    <string name="Setting_developer">개발팀</string>
    <string name="Setting_ask">문의 / 피드백</string>
    <string name="Setting_logout">로그아웃</string>
    <string name="Setting_quit">회원 탈퇴</string>
    <string name="Setting_off">꺼짐</string>
    <string name="Setting_PIN">PIN 앱 잠금 설정</string>
    <string name="SignUp_send">확인 코드 전송</string>
    <string name="SignUp_privacy">개인정보 처리방침</string>
    <string name="SignUp_title">회원가입</string>
    <string name="SignUp_email">이메일</string>
    <string name="SignUp_password1">비밀번호</string>
    <string name="SignUp_password2">비밀번호 재입력</string>
    <string name="SignUp_name">이름</string>
    <string name="SignUp_alert3">일치하지 않습니다.</string>
    <string name="SignUp_alert2">비밀번호는 8자 이상이어야 합니다.</string>
    <string name="SignUp_alert1">올바른 이메일 주소가 아닙니다.</string>
    <string name="SignUp_text4">이미 존재하는 계정입니다.</string>
    <string name="Login_title">로그인</string>
    <string name="Login_findPassword">비밀번호 찾기</string>
    <string name="Login_alert1">올바른 이메일 주소가 아닙니다.</string>
    <string name="Login_alert">가입되지 않은 계정이거나 비밀번호가 틀립니다.</string>
    <string name="PrivacyPolicy_title">개인정보 처리방침</string>
    <string name="PrivacyPolicy_content">(141.164.36.245에서 제공하는 앱 서비스 이하 명칭 The Tutor)은(는) 개인정보보호법에 따라 이용자의 개인정보 보호 및 권익을 보호하고 개인정보와 관련한 이용자의 고충을 원활하게 처리할 수 있도록 다음과 같은 처리방침을 두고 있습니다.&#10;(The Tutor) 은(는) 회사는 개인정보처리방침을 개정하는 경우 웹사이트 공지사항(또는 개별공지)을 통하여 공지할 것입니다.&#10;본 방침은부터 2020년 8월 1일부터 시행됩니다.&#10;1. 개인정보의 처리 목적 (The Tutor)은(는) 개인정보를 다음의 목적을 위해 처리합니다. 처리한 개인정보는 다음의 목적이외의 용도로는 사용되지 않으며 이용 목적이 변경될 시에는 사전동의를 구할 예정입니다.가. 홈페이지 회원가입 및 관리&#10;회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인증, 회원자격 유지·관리, 서비스 부정이용 방지, 각종 고지·통지 등을 목적으로 개인정보를 처리합니다.&#10;나. 재화 또는 서비스 제공&#10;서비스 제공, 콘텐츠 제공, 맞춤 서비스 제공 등을 목적으로 개인정보를 처리합니다.&#10;다. 마케팅 및 광고에의 활용&#10;신규 서비스(제품) 개발 및 맞춤 서비스 제공, 이벤트 및 광고성 정보 제공 및 참여기회 제공 , 서비스의 유효성 확인, 접속빈도 파악 또는 회원의 서비스 이용에 대한 통계 등을 목적으로 개인정보를 처리합니다.&#10;2. 개인정보 파일 현황&#10;1. 개인정보 파일명 : The Tutor 개인정보 처리방침&#10;- 개인정보 항목 : 이메일, 비밀번호, 로그인ID, 이름, 학력, 접속 로그, 쿠키, 접속 IP 정보&#10;- 수집방법 : 홈페이지, 서면양식, 생성정보 수집 툴을 통한 수집&#10;- 보유근거 : 맞춤형 서비스 제공 목적&#10;- 보유기간 : 지체없이 파기&#10;- 관련법령 : 대금결제 및 재화 등의 공급에 관한 기록 : 5년&#10;3. 개인정보의 처리 및 보유 기간&#10;1) (The Tutor)은(는) 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집시에 동의 받은 개인정보 보유,이용기간 내에서 개인정보를 처리,보유합니다.&#10;2) 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다.&#10;1. 홈페이지 회원가입 및 관리&#10;홈페이지 회원가입 및 관리와 관련한 개인정보는 수집.이용에 관한 동의일로부터(지체없이 파기)까지 위 이용목적을 위하여 보유.이용됩니다.-보유근거 : 맞춤형 서비스 제공 목적&#10;-관련법령 : 1)신용정보의 수집/처리 및 이용 등에 관한 기록 : 3년&#10;2) 대금결제 및 재화 등의 공급에 관한 기록 : 5년&#10;-예외사유 : 즉시 파기 요청 시 즉시 파기 처리&#10;4. 정보주체와 법정대리인의 권리·의무 및 그 행사방법 이용자는 개인정보주체로써 다음과 같은 권리를 행사할 수 있습니다.&#10;1) 정보주체는 SOFTCON에 대해 언제든지 개인정보 열람,정정,삭제,처리정지 요구 등의 권리를 행사할 수 있습니다.&#10;2) 제1항에 따른 권리 행사는SOFTCON에 대해 개인정보 보호법 시행령 제41조제1항에 따라 서면, 전자우편, 모사전송(FAX) 등을 통하여 하실 수 있으며 SOFTCON은(는) 이에 대해 지체 없이 조치하겠습니다.&#10;3) 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수 있습니다. 이 경우 개인정보 보호법 시행규칙 별지 제11호 서식에 따른 위임장을 제출하셔야 합니다.&#10;4) 개인정보 열람 및 처리정지 요구는 개인정보보호법 제35조 제5항, 제37조 제2항에 의하여 정보주체의 권리가 제한 될 수 있습니다.&#10;5) 개인정보의 정정 및 삭제 요구는 다른 법령에서 그 개인정보가 수집 대상으로 명시되어 있는 경우에는 그 삭제를 요구할 수 없습니다.&#10;6) SOFTCON은(는) 정보주체 권리에 따른 열람의 요구, 정정·삭제의 요구, 처리정지의 요구 시 열람 등 요구를 한 자가 본인이거나 정당한 대리인인지를 확인합니다.&#10;5. 처리하는 개인정보의 항목 작성&#10;1) (The Tutor)은(는) 다음의 개인정보 항목을 처리하고 있습니다.&#10;홈페이지 회원가입 및 관리&#10;- 필수항목 : 이메일, 비밀번호, 로그인ID, 이름, 학력, 서비스 이용 기록, 접속 로그, 쿠키, 접속 IP 정보&#10;- 선택항목 : 이외 없음&#10;6. 개인정보의 파기&#10;(The Tutor)은(는) 원칙적으로 개인정보 처리목적이 달성된 경우에는 지체없이 해당 개인정보를 파기합니다. 파기의 절차, 기한 및 방법은 다음과 같습니다.&#10;-파기절차&#10;이용자가 입력한 정보는 목적 달성 후 별도의 DB에 옮겨져(종이의 경우 별도의 서류) 내부 방침 및 기타 관련 법령에 따라 일정기간 저장된 후 혹은 즉시 파기됩니다. 이 때, DB로 옮겨진 개인정보는 법률에 의한 경우가 아니고서는 다른 목적으로 이용되지 않습니다.&#10;-파기기한&#10;이용자의 개인정보는 개인정보의 보유기간이 경과된 경우에는 보유기간의 종료일로부터 5일 이내에, 개인정보의 처리 목적 달성, 해당 서비스의 폐지, 사업의 종료 등 그 개인정보가 불필요하게 되었을 때에는 개인정보의 처리가 불필요한 것으로 인정되는 날로부터 5일 이내에 그 개인정보를 파기합니다.&#10;-파기방법&#10;전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다.&#10;종이에 출력된 개인정보는 분쇄기로 분쇄하거나 소각을 통하여 파기합니다.&#10;7. 개인정보 자동 수집 장치의 설치, 운영 및 거부에 관한 사항&#10;SOFTCON 은 정보주체의 이용정보를 저장하고 수시로 불러오는 ‘쿠키’를 사용하지 않습니다.&#10;8. 개인정보 보호책임자 작성&#10;1) SOFTCON(The Tutor) 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.▶ 개인정보 보호책임자&#10;성명 :이현준&#10;직책 :Team Leader&#10;※ 개인정보 보호 담당부서로 연결됩니다.&#10;▶ 개인정보 보호 담당부서&#10;부서명 :The Tutor 서비스부&#10;2) 정보주체께서는 SOFTCON(The Tutor) 의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. SOFTCON(The Tutor) 은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.&#10;9. 개인정보 처리방침 변경&#10;1) 이 개인정보처리방침은 시행일로부터 적용되며, 법령 및 방침에 따른 변경내용의 추가, 삭제 및 정정이 있는 경우에는 변경사항의 시행 7일 전부터 공지사항을 통하여 고지할 것입니다.&#10;10. 개인정보의 안전성 확보 조치 (The Tutor)은(는) 개인정보보호법 제29조에 따라 다음과 같이 안전성 확보에 필요한 기술적/관리적 및 물리적 조치를 하고 있습니다.&#10;1. 정기적인 자체 감사 실시&#10;개인정보 취급 관련 안정성 확보를 위해 정기적(분기 1회)으로 자체 감사를 실시하고 있습니다.&#10;2. 개인정보 취급 직원의 최소화 및 교육&#10;개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화 하여 개인정보를 관리하는 대책을 시행하고 있습니다.&#10;3. 내부관리계획의 수립 및 시행&#10;개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.&#10;4. 해킹 등에 대비한 기술적 대책&#10;(The Tutor)은 해킹이나 컴퓨터 바이러스 등에 의한 개인정보 유출 및 훼손을 막기 위하여 보안프로그램을 설치하고 주기적인 갱신·점검을 하며 외부로부터 접근이 통제된 구역에 시스템을 설치하고 기술적/물리적으로 감시 및 차단하고 있습니다.&#10;5. 개인정보의 암호화&#10;이용자의 개인정보는 비밀번호는 암호화 되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화 하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다.&#10;6. 접속기록의 보관 및 위변조 방지&#10;개인정보처리시스템에 접속한 기록을 최소 6개월 이상 보관, 관리하고 있으며, 접속 기록이 위변조 및 도난, 분실되지 않도록 보안기능 사용하고 있습니다.&#10;7. 개인정보에 대한 접근 제한&#10;개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.&#10;8. 문서보안을 위한 잠금장치 사용&#10;개인정보가 포함된 서류, 보조저장매체 등을 잠금장치가 있는 안전한 장소에 보관하고 있습니다.&#10;9. 비인가자에 대한 출입 통제&#10;개인정보를 보관하고 있는 물리적 보관 장소를 별도로 두고 이에 대해 출입통제 절차를 수립, 운영하고 있습니다.</string>
    <string name="SeeMore_title">공부할 과목 선택</string>
    <string name="Quit_title">회원 탈퇴</string>
    <string name="Quit_text1">회원을 탈퇴하면 모든 개인정보와 데이터가 &#10;즉시 삭제되며 공부 기록도 모두 삭제됩니다.</string>
    <string name="Quit_text2">회원 탈퇴를 진행하기 위해서는 &#10;본인의 이메일을 작성해주세요.</string>
    <string name="Quit_text3">탈퇴 시 모든 정보는 즉시 파기되어 복구할 수 없습니다. &#10;정말 The Tutor 서비스를 탈퇴하시겠습니까?</string>
    <string name="Quit_quit">탈퇴하기</string>
    <string name="Quit_text4">비밀번호를 입력해주세요.</string>
    <string name="FindPassword_title">비밀번호 재설정</string>
    <string name="FindPassword_done">확인</string>
    <string name="FindPassword_send">전송</string>
    <string name="FindPassword_okCode">확인코드</string>
    <string name="FindPassword_ok">확인</string>
    <string name="FindPassword_pw">비밀번호</string>
    <string name="FindPassword_pwRe">비밀번호 재입력</string>
    <string name="FindPassword_email">이메일</string>
    <string name="Event_noMore">다시 보지 않기</string>
    <string name="Event_title">이벤트 안내</string>
    <string name="Diagnosis_title">학습 진단</string>
    <string name="Diagnosis_text1">요일별 공부시간</string>
    <string name="Diagnosis_text2">과목별 공부시간</string>
    <string name="Diagnosis_text3">공부시간 및 쉬는시간</string>
    <string name="Developer_title">개발팀</string>
    <string name="ChangePassword_title">비밀번호 변경</string>
    <string name="ChangePassword_old">이전 비밀번호</string>
    <string name="ChangePassword_new1">새 비밀번호</string>
    <string name="ChangePassword_new2">비밀번호 재입력</string>
    <string name="ChangePassword_done">확인</string>
    <string name="Ask_title">문의하기</string>
    <string name="Ask_text1">이메일 (답변 회신 받을 주소)</string>
    <string name="Ask_text2">제목</string>
    <string name="Ask_text3">본문</string>
    <string name="Ask_send">보내기</string>
    <string name="Ask_numInit">글자수 0/200자</string>
    <string name="Ask_contentHint">본문을 입력하세요</string>
    <string name="AfterStudying_done">확인</string>
    <string name="AfterStudying_text1">공부했습니다</string>
    <string name="AfterStudying_text2">이번 공부는 집중이 잘 되었나요?</string>
    <string name="Ask_titleHint">제목을 입력하세요</string>
    <string name="DDay_title">D-Day 설정</string>
    <string name="DDay_save">저장</string>
    <string name="DDay_name">D-Day 이름 (최대 10자)</string>
    <string name="DDay_text1">오늘 이후여야 합니다.</string>
    <string name="Lock_1">1</string>
    <string name="Lock_2">2</string>
    <string name="Lock_3">3</string>
    <string name="Lock_4">4</string>
    <string name="Lock_5">5</string>
    <string name="Lock_6">6</string>
    <string name="Lock_7">7</string>
    <string name="Lock_8">8</string>
    <string name="Lock_9">9</string>
    <string name="Lock_clear">C</string>
    <string name="Lock_0">0</string>
    <string name="Lock_backSpace">←</string>
    <string name="Lock_wrong">PIN이 바르지 않습니다</string>
    <string name="Lock_button">이메일/비밀번호로 로그인</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="SetLock_title">PIN 설정</string>
    <string name="SetLock_switch">PIN 앱 잠금</string>
    <string name="SetLock_save">저장</string>
    <string name="SetLock_unlock">PIN 잠금 해제</string>
    <string name="GetSub_save">저장</string>
    <string name="GetSub_title">과목 입력</string>
    <string name="GetSub_add">추가하기</string>
    <string name="GetSub_subName">과목 이름</string>
    <string name="GetSub_numinit">과목수 0/10개</string>
    <string name="GetSub_closeDesc">GetSub_subCloseButton</string>
    <string name="EditSub_save">저장</string>
    <string name="EditSub_title">과목 수정</string>
    <string name="Developer_team1">김재훈</string>
    <string name="Developer_team1_1">LEAD AI MODEL AND SYSTEM DEVELOPER</string>
    <string name="Developer_team2">이현준</string>
    <string name="Developer_team2_1">AI MODEL AND SYSTEM DEVELOPER</string>
    <string name="Developer_team3">이호은</string>
    <string name="Developer_team3_1">LEAD DESIGNER AND LEAD APP DEVELOPER</string>
    <string name="Developer_SOFTCON">SOFTCON_ICON</string>
    <string name="Developer_teamName">THE TUTOR TEAM</string>
    <string name="Home_seeMore">과목 더보기</string>
    <string name="Home_TODO">TO DO</string>
    <string name="Home_TIMETABLE">TIME TABLE</string>
    <string name="Home_score">달성률 0%</string>
    <string name="Result_title">추천 시간표</string>
    <string name="Filter_KoNumEng">^[a-zA-Z0-9가-힣ㄱ-ㅎㅏ-ㅣ\\u318D\\u119E\\u11A2\\u2022\\u2025\\u00b7\\uFE55]+$</string>
    <string name="Today_numTask">0/12개</string>
    <string name="Today_imgDes">Today_CloseButton</string>
    <string name="Today_text1">과목 선택</string>
</resources>