<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DeveloperActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="20dp"
    tools:context=".DeveloperActivity">

    <LinearLayout
        android:id="@+id/Developer_LinearLayout_TOP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="40dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/Developer_ImageButton_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FF0000"
            android:contentDescription="@string/Developer_title"
            app:srcCompat="@drawable/backbutton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/nanumsquareb"
            android:text="@string/Developer_title"
            android:textColor="#000000"
            android:textSize="28dp"
            tools:ignore="SpUsage" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Developer_LinearLayout_CENTER"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Developer_LinearLayout_TOP">

        <ImageView
            android:id="@+id/Developer_ImageView_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/Developer_title"
            app:srcCompat="@drawable/logo_b" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebasneue"
            android:text="@string/Developer_teamName"
            android:textColor="#000000"
            android:textSize="28dp"
            tools:ignore="SpUsage" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquarer"
            android:text="@string/Developer_team1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20dp"
            tools:ignore="SpUsage" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebasneue"
            android:text="@string/Developer_team1_1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14dp"
            tools:ignore="SpUsage" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquarer"
            android:text="@string/Developer_team2"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20dp"
            tools:ignore="SpUsage" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebasneue"
            android:text="@string/Developer_team2_1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14dp"
            tools:ignore="SpUsage" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquarer"
            android:text="@string/Developer_team3"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20dp"
            tools:ignore="SpUsage" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebasneue"
            android:text="@string/Developer_team3_1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14dp"
            tools:ignore="SpUsage" />

    </LinearLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:contentDescription="@string/Developer_SOFTCON"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/softcon" />

</androidx.constraintlayout.widget.ConstraintLayout>